[package]
name = "autogen_edge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/main.rs"
name = "main"

[[bin]]
path = "src/chat.rs"
name = "chat"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }

#[dependencies]
#hyper = { version = "0.14", features = ["full"] }
##reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
#tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai-wasi = { path = "/home/jaykchen/projects/async-openai/async-openai" }
#async-openai-wasi = { git = "https://github.com/jichen-jay/async-openai.git", branch = "edge-agent" }
#thiserror = "1"
#uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
#log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
#wasi-logger = { version = "0.1.2", features = ["kv"] }
either = "1.12.0"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
#
anyhow = "1"
#secrecy = "0.8.0"
dotenv = "0.15.0"
#urlencoding = "2"
regex = "1.10.4"
futures = "0.3.30"
#lazy_static = "1.4.0"
#chrono = "0.4.38"
#once_cell = "1.19.0"
llama-core = { version = "0.14.1", features = ["logging"] }
endpoints = "0.12.0"
chat-prompts = "0.11.1"
chrono = "0.4.38"
once_cell = "1.19.0"
##futures-util = "0.3.30"
###hyper_wasi = { git="https://github.com/WasmEdge/hyper.git",  features = ["full"] }
##walkdir = "2.5.0"
##http = "0.2.11"
##tokio_wasi = { version = "1", features = ["full"] }
#hyper-rustls = { version = "0.27.2" }
#reqwest = "0.12.5"
##http-body-util = "0.1"
###hyper-util = { version = "0.1", features = ["client", "server", "service", "http1", "http2", "tokio"] }
##bytes = "1.7.1"
###reqwest_wasi = { version = "0.11", features = ["json", "stream"] }
##hyper-tls = "0.6.0"
##hyper_wasi = { version = "0.15", features = ["full"] }
